# steering-lite

./: .gitignore  AGENTS.md  README.md  RESEARCH_JOURNAL.md  justfile  pyproject.toml
data/: branching_suffixes.json  branching_suffixes_filt.json
docs/: RESEARCH_JOURNAL.md
scripts/: _meta.py  _replot_roadlines.py  _replot_roadlines_isokl.py  aggregate_bench.py  aggregate_bench_l4.py  aggregate_dist_shift.py  aggregate_flips.py  aggregate_iso_tv.py  airisk_dilemmas_benchmark.py  baseline_engineered_prompt.py  baseline_repeng.py  bench_bidir_iso.py  bench_l4_calibrated.sh  bench_l7-19_calibrated.sh  bench_v8_guided.sh  compare_iso_coeffs.py  compare_persona_templates.py  compare_persona_variants.py  compute_si_and_f1.py  compute_si_flip.py  daily_dilemmas_benchmark.py  expo_traj_demo.py  filter_branching_suffixes.py  iso_kl_sampled.py  iso_tv_calibrate.py  long_gen_check.py  onpolicy_vs_teacher.py  plot_trajectory_fig.py  plot_trajectory_nll.py  regen_engineered_prompt.py  results.py  run_airisk_readme_latest.py  run_iterated_steer.py  run_tinymfv_sweep.py  sampled_trace_demo.py  summarize_airisk_latest.py
scripts/calib/: kl_bisect.py
scripts/iso_kl/: 03_traces.py
scripts/traj/: 01_kl_plot.py  02_traces.py
spec/: 20260428_trajectory_nll_calibration.md  20260428_variant_audit.md
src/steering_lite/: __init__.py  _quiet.py  attach.py  calibrate.py  config.py  daily_dilemmas.py  extract.py  extract_attn.py  extract_linear.py  method.py  target.py  vector.py
src/steering_lite/data/: __init__.py  branching.py  personas.py
src/steering_lite/eval/: __init__.py  airisk_dilemmas.py  tinymfv.py  (+1 more)
tests/: _smoke_secant.py  test_airisk_dilemmas_bug.py  test_daily_dilemmas_smoke.py  test_extract_attn_smoke.py  test_pipeline.py  test_smoke.py
(+15 files in other folders)
